{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 391,
  "lineage": "0358ea14-a73b-885c-0b9b-4eb6d07a0323",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "AnsibleServer",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-015f3596bb2ef1aaa",
            "arn": "arn:aws:ec2:sa-east-1:762233738128:instance/i-0855d65e14c88e854",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3BucketManager",
            "id": "i-0855d65e14c88e854",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sa-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c9d364ff8b681e2d",
            "private_dns": "ip-10-0-1-106.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.106",
            "public_dns": "ec2-18-231-96-214.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.231.96.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0910722e9d421aadf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068365d7d345fbfcd",
            "tags": {
              "Environment": "Test",
              "LastUpdate": "(UY Time) - 21-Feb-2025 23:52",
              "Name": "AnsibleServer",
              "Owner": "Oscar"
            },
            "tags_all": {
              "Environment": "Test",
              "LastUpdate": "(UY Time) - 21-Feb-2025 23:52",
              "Name": "AnsibleServer",
              "Owner": "Oscar"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ecf8e3bd893f916b"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.main_subnet",
            "module.network.aws_vpc.main_vpc",
            "module.security_group.aws_security_group.default_sg"
          ]
        },
        {
          "index_key": "AnsibleTarget",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-015f3596bb2ef1aaa",
            "arn": "arn:aws:ec2:sa-east-1:762233738128:instance/i-0144a5a225e453005",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3BucketManager",
            "id": "i-0144a5a225e453005",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sa-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f851e9f615e5c4d",
            "private_dns": "ip-10-0-1-162.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.162",
            "public_dns": "ec2-18-230-151-134.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.230.151.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01295701a4b53fe83",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068365d7d345fbfcd",
            "tags": {
              "Environment": "Test",
              "LastUpdate": "(UY Time) - 21-Feb-2025 23:52",
              "Name": "AnsibleTarget",
              "Owner": "Oscar"
            },
            "tags_all": {
              "Environment": "Test",
              "LastUpdate": "(UY Time) - 21-Feb-2025 23:52",
              "Name": "AnsibleTarget",
              "Owner": "Oscar"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ecf8e3bd893f916b"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.main_subnet",
            "module.network.aws_vpc.main_vpc",
            "module.security_group.aws_security_group.default_sg"
          ]
        },
        {
          "index_key": "DockerServer",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-015f3596bb2ef1aaa",
            "arn": "arn:aws:ec2:sa-east-1:762233738128:instance/i-0815e87c13e3dcc5e",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3BucketManager",
            "id": "i-0815e87c13e3dcc5e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sa-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b01fb286bc434d4",
            "private_dns": "ip-10-0-1-93.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-56-124-75-204.sa-east-1.compute.amazonaws.com",
            "public_ip": "56.124.75.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c2690b9a1b140420",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068365d7d345fbfcd",
            "tags": {
              "Environment": "Test",
              "LastUpdate": "(UY Time) - 21-Feb-2025 23:52",
              "Name": "DockerServer",
              "Owner": "Oscar"
            },
            "tags_all": {
              "Environment": "Test",
              "LastUpdate": "(UY Time) - 21-Feb-2025 23:52",
              "Name": "DockerServer",
              "Owner": "Oscar"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ecf8e3bd893f916b"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.main_subnet",
            "module.network.aws_vpc.main_vpc",
            "module.security_group.aws_security_group.default_sg"
          ]
        },
        {
          "index_key": "JenkinsServer",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-015f3596bb2ef1aaa",
            "arn": "arn:aws:ec2:sa-east-1:762233738128:instance/i-00b5978581f0ab2a1",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3BucketManager",
            "id": "i-00b5978581f0ab2a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sa-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0796b47919aa658f5",
            "private_dns": "ip-10-0-1-48.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.48",
            "public_dns": "ec2-54-233-48-29.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.233.48.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0170353867d139155",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068365d7d345fbfcd",
            "tags": {
              "Environment": "Test",
              "LastUpdate": "(UY Time) - 21-Feb-2025 23:52",
              "Name": "JenkinsServer",
              "Owner": "Oscar"
            },
            "tags_all": {
              "Environment": "Test",
              "LastUpdate": "(UY Time) - 21-Feb-2025 23:52",
              "Name": "JenkinsServer",
              "Owner": "Oscar"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ecf8e3bd893f916b"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.main_subnet",
            "module.network.aws_vpc.main_vpc",
            "module.security_group.aws_security_group.default_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "local_exec_provisioner_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-015f3596bb2ef1aaa",
            "arn": "arn:aws:ec2:sa-east-1:762233738128:instance/i-0cc43c20fad925583",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3BucketManager",
            "id": "i-0cc43c20fad925583",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sa-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea86e11e8bfb93f2",
            "private_dns": "ip-10-0-1-204.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.204",
            "public_dns": "ec2-56-124-36-46.sa-east-1.compute.amazonaws.com",
            "public_ip": "56.124.36.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bb95d9a914630187",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068365d7d345fbfcd",
            "tags": {
              "Environment": "Test",
              "LastUpdate": "(UY Time) - 21-Feb-2025 23:52",
              "Name": "LocalExecProvisionerTest",
              "Owner": "Oscar"
            },
            "tags_all": {
              "Environment": "Test",
              "LastUpdate": "(UY Time) - 21-Feb-2025 23:52",
              "Name": "LocalExecProvisionerTest",
              "Owner": "Oscar"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ecf8e3bd893f916b"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.main_subnet",
            "module.network.aws_vpc.main_vpc",
            "module.security_group.aws_security_group.default_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "remote_exec_provisioner_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-015f3596bb2ef1aaa",
            "arn": "arn:aws:ec2:sa-east-1:762233738128:instance/i-06255b5b4dd2acd2e",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3BucketManager",
            "id": "i-06255b5b4dd2acd2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sa-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f598117db11b2d9b",
            "private_dns": "ip-10-0-1-137.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-56-124-122-246.sa-east-1.compute.amazonaws.com",
            "public_ip": "56.124.122.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-092dc21dcf4c5ad6d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068365d7d345fbfcd",
            "tags": {
              "Environment": "Test",
              "LastUpdate": "(UY Time) - 21-Feb-2025 23:52",
              "Name": "RemoteExecProvisionerTest",
              "Owner": "Oscar"
            },
            "tags_all": {
              "Environment": "Test",
              "LastUpdate": "(UY Time) - 21-Feb-2025 23:52",
              "Name": "RemoteExecProvisionerTest",
              "Owner": "Oscar"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ecf8e3bd893f916b"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.main_subnet",
            "module.network.aws_vpc.main_vpc",
            "module.security_group.aws_security_group.default_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:762233738128:internet-gateway/igw-08bff49d5795291d0",
            "id": "igw-08bff49d5795291d0",
            "owner_id": "762233738128",
            "vpc_id": "vpc-0a1b9645b6f102002"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:762233738128:route-table/rtb-071a4f94aec4ee2e7",
            "id": "rtb-071a4f94aec4ee2e7",
            "owner_id": "762233738128",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08bff49d5795291d0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a1b9645b6f102002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.main_igw",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cc1383100e85e12",
            "route_table_id": "rtb-071a4f94aec4ee2e7",
            "subnet_id": "subnet-068365d7d345fbfcd"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main_igw",
            "module.network.aws_route_table.main_rt",
            "module.network.aws_subnet.main_subnet",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:762233738128:subnet/subnet-068365d7d345fbfcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068365d7d345fbfcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762233738128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main Subnet"
            },
            "tags_all": {
              "Name": "Main Subnet"
            },
            "vpc_id": "vpc-0a1b9645b6f102002"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:762233738128:vpc/vpc-0a1b9645b6f102002",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a2888579ec74d22",
            "default_route_table_id": "rtb-078aaaa73f85c3f63",
            "default_security_group_id": "sg-02fb8efccc0480e4c",
            "dhcp_options_id": "dopt-02c4193dec51a4e99",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1b9645b6f102002",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078aaaa73f85c3f63",
            "owner_id": "762233738128",
            "tags": {
              "Name": "Main VPC"
            },
            "tags_all": {
              "Name": "Main VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:762233738128:security-group/sg-0ecf8e3bd893f916b",
            "description": "Allow basic comms for new servers",
            "egress": [],
            "id": "sg-0ecf8e3bd893f916b",
            "ingress": [],
            "name": "Default security group for new instances",
            "name_prefix": "",
            "owner_id": "762233738128",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-sg",
              "type": "security-group"
            },
            "tags_all": {
              "Name": "default-sg",
              "type": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1b9645b6f102002"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3152024688",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ecf8e3bd893f916b",
            "security_group_rule_id": "sgr-036e7e5eb9190a428",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc",
            "module.security_group.aws_security_group.default_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1017092005",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ecf8e3bd893f916b",
            "security_group_rule_id": "sgr-00a30245e3ae72e54",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc",
            "module.security_group.aws_security_group.default_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-225069509",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ecf8e3bd893f916b",
            "security_group_rule_id": "sgr-0637b216f5fa477ef",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc",
            "module.security_group.aws_security_group.default_sg"
          ]
        }
      ]
    }
  ]
}